text overlaping issue fixed

--- a/src/landing/home.css
+++ b/src/landing/home.css
@@ -962,5 +962,9 @@ border: 1px solid rgba(0, 95, 148, 0.300918) !important;
         height: 460px;
     }
 
+    .right-rotate-text{
+        left: 41.5% !important;
+    }
+
 
 }
